// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAvatar render TextAvatar 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 10,
        "lineHeight": 14,
        "minHeight": 14,
      },
      undefined,
    ]
  }
>
  ИП
</Text>
`;

exports[`TextAvatar render TextAvatar size L 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 22,
        "minHeight": 22,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size M 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 12,
        "lineHeight": 16,
        "minHeight": 16,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size S 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 10,
        "lineHeight": 14,
        "minHeight": 14,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size XL 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 22,
        "lineHeight": 24,
        "minHeight": 24,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;
